# pdf-to-mp3

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISH.md  README.md  WINDOWS_INSTALL.md  build_exe.py  conversor_mp3.spec  launcher.py  pyproject.toml  requirements.txt  run.bat
.github/workflows/: build-installers.yml
examples/: README.md
images/: README.md
installers/linux/: build_deb.sh  conversor-mp3.desktop
installers/linux/DEBIAN/: control  postinst
installers/macos/: build_dmg.sh
installers/windows/: installer.iss
output/: .gitkeep
scripts/: build_exe.py  launcher.py
src/: app.py  config.py  styles.py  types.py
src/selectors/: history.py  voices.py
src/services/: conversion.py  pdf.py  tts.py
tests/services/: test_pdf.py
