[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "conversor-mp3"
version = "1.0.0"
description = "Conversor de PDF para MP3 usando vozes neurais"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.13"
dependencies = [
    "PyPDF2==3.0.1",
    "edge-tts>=7.2.7",
    "streamlit>=1.38.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
    "Pillow>=10.0",
]

[project.scripts]
conversor-mp3 = "scripts.launcher:main"
